--- a/youth/index.html
+++ b/youth/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>葱花</title>
+    <meta name="description" content="方块图片">
     <style>
         body {
             background-color: black;
