--- a/youth/index.html
+++ b/youth/index.html
@@ -19,7 +19,6 @@
         }
 
         .main {
-            /* margin: 150px auto; */
             width: 100px;
             height: 100px;
             transform-style: preserve-3d;
@@ -35,8 +34,6 @@
             text-align: center;
             line-height: 200px;
             user-select: none;
-            /* opacity: 0.9; */
-            /* border: 2px solid red; */
             opacity: .8;
             transition: all 1s;
             -moz-transition: all 1s;
@@ -48,42 +45,11 @@
             background-color: rgba(255, 0, 0, .6);
             transform: translateZ(50px);
         }
-
-        /*
-        .box:nth-child(2) {
-            background-color: rgba(0, 255, 0, .6);
-            transform: rotateX(-90deg) translateZ(50px);
-
-        }
-
-        .box:nth-child(3) {
-            background-color: rgba(0, 0, 255, .6);
-            transform: rotateX(-180deg) translateZ(50px);
-        }
-
-        .box:nth-child(4) {
-            background-color: rgba(255, 255, 0, .6);
-            transform: rotateX(-270deg) translateZ(50px);
-
-        }
-
-        .box:nth-child(5) {
-            background-color: rgba(255, 0, 255, .6);
-            transform: rotateY(-90deg) translateZ(50px);
-
-        }
-
-        .box:nth-child(6) {
-            transform: rotateY(90deg) translateZ(50px);
-            background-color: rgba(0, 255, 255, .6);
-        } */
     </style>
 </head>
 
 <body>
-    <div class="main" id="main" style="transform: rotateX(-20deg) rotateY(-20deg)">
-
-    </div>
+    <div class="main" id="main" style="transform: rotateX(-20deg) rotateY(-20deg)"></div>
 </body>
 <script>
     let main = document.getElementById('main');
@@ -92,10 +58,7 @@
     mf(main, "div1", 50, inner);
     let outer = shuffle(arr);
     mf(main, "anim", 50, outer, true);
-    // setTimeout(() => {
-    //     
-    //     mf(main, 150, outer);
-    // }, 2000)
+
     main.onmousedown = function (ele) {
         let xy = main.style.transform.split(" ");
         let tx = parseInt(xy[0].substring(0, xy[0].length - 4).substr(8));
@@ -129,7 +92,6 @@
         // console.log(imgArr);
         if (flag) {
             let imgArr = document.getElementById("anim").children
-            console.log(imgArr)
             setTimeout(() => {
                 for (const i in arr) {
                     imgArr[i].onmousedown = (el) => el.preventDefault();
@@ -154,6 +116,21 @@
         }
         return a;
     };
+    // 触摸事件
+    let startX = 0, startY = 0;
+    let moveX = 0, moveY = 0;
+    let roateNum = [];
+    main.addEventListener('touchstart', function (el) {
+        let rotateData = main.style.transform.split(' ');
+        roateNum = rotateData.map(item => parseInt(item.substring(item.indexOf("(") + 1, item.indexOf("d"))));
+        startX = el.touches[0].clientX;
+        startY = el.touches[0].clientY;
+    })
+    main.addEventListener('touchmove', function (el) {
+        moveX = el.touches[0].clientX - startX;
+        moveY = el.touches[0].clientY - startY;
+        main.style.transform = `rotateX(${roateNum[0] - moveY}deg) rotateY(${roateNum[1] + moveX}deg)`
+    })
 </script>
 
 </html>
