update youth/index.html. 添加百度统计

--- a/youth/index.html
+++ b/youth/index.html
@@ -192,5 +192,14 @@
         main.style.transform = `rotateX(${-e.beta + x}deg) rotateY(${e.gamma + y}deg)`;
     }
 </script>
+<script>
+var _hmt = _hmt || [];
+(function() {
+  var hm = document.createElement("script");
+  hm.src = "https://hm.baidu.com/hm.js?96797be5057f773cafa71466303240eb";
+  var s = document.getElementsByTagName("script")[0]; 
+  s.parentNode.insertBefore(hm, s);
+})();
+</script>
 
 </html>
