--- a/youth/index.html
+++ b/youth/index.html
@@ -81,6 +81,7 @@
     </div>
     <div class="main" id="main" style="transform: rotateX(-20deg) rotateY(-20deg)"></div>
 </body>
+<script src="../tj.js"></script>
 <script>
     let main = document.getElementById('main');
     let arr = ['./img/1.jpg', "./img/6.jpg", "./img/2.jpg", "./img/3.jpg", "./img/4.jpg", "./img/5.jpg"];
@@ -191,15 +192,6 @@
         let y = roateNum[1];
         main.style.transform = `rotateX(${-e.beta + x}deg) rotateY(${e.gamma + y}deg)`;
     }
-</script>
-<script>
-var _hmt = _hmt || [];
-(function() {
-  var hm = document.createElement("script");
-  hm.src = "https://hm.baidu.com/hm.js?96797be5057f773cafa71466303240eb";
-  var s = document.getElementsByTagName("script")[0]; 
-  s.parentNode.insertBefore(hm, s);
-})();
 </script>
 
 </html>
