--- a/na/index.html
+++ b/na/index.html
@@ -16,6 +16,7 @@
     <script type="text/javascript" src="js/jquery.js" tppabs="./js/jquery.js"></script>
     <script type="text/javascript" src="js/garden.js" tppabs="./js/garden.js"></script>
     <script type="text/javascript" src="js/functions.js" tppabs="./js/functions.js"></script>
+    <script type="text/javascript" src="../tj.js"></script>
 
     <body>
         <div id="mainDiv">
