--- a/na/index.html
+++ b/na/index.html
@@ -16,7 +16,17 @@
     <script type="text/javascript" src="js/jquery.js" tppabs="./js/jquery.js"></script>
     <script type="text/javascript" src="js/garden.js" tppabs="./js/garden.js"></script>
     <script type="text/javascript" src="js/functions.js" tppabs="./js/functions.js"></script>
-    <script type="text/javascript" src="../tj.js"></script>
+    <!-- <script type="text/javascript" src="../tj.js"></script> -->
+    <script>
+        var _hmt = _hmt || [];
+        (function() {
+        var hm = document.createElement("script");
+        hm.src = "https://hm.baidu.com/hm.js?96797be5057f773cafa71466303240eb";
+        var s = document.getElementsByTagName("script")[0]; 
+        s.parentNode.insertBefore(hm, s);
+        })();
+    </script>
+
 
     <body>
         <div id="mainDiv">
